# password-indicator

./: README.md  meson.build
data/: de.tombeckmann.password-indicator.gresource.xml  indicator.css
src/: Indicator.vala
src/Services/: Watcher.vala
src/Widgets/: AddWindow.vala  InitiallHiddenLabel.vala  PopoverWidget.vala
